--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
             </section>
         </main>
         <footer>
+            <div id="Borda"></div>
             para mais informações nos siga no instagram <a href="https://instagram.com/rocketsect" target="_blank">@rocketsect</a>
         </footer>
     </div>
-    <img src="images/padlock.svg" alt="imagem de cadeado representando segurança">
+    <img 
+    id = "cadeado"
+    src="images/padlock.svg" alt="imagem de cadeado representando segurança">
 </body>
 </html>
